# esp32-ws2812-rs

./: .gitignore  Cargo.toml  README.md  build.rs  control.py  rust-toolchain.toml  server.py
.cargo/: config.toml
docs/: README.md  serial_protocol.md
src/: algo.rs  command.rs  lib.rs
testing_scripts/: control.py  test_manual_color.py
wayland-capture/: Makefile  capture.c  multi_capture.c  multi_capture_screencopy.c  vid.py
