[package]
edition      = "2024"
name         = "rgb-led"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "rgb-led"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
heapless = { version = "0.9.2", features = ["portable-atomic"] }
micromath = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false